--- a/journal/201903.md
+++ b/journal/201903.md
@@ -26,6 +26,7 @@
 Discussions:
 
 * yes-based quorum https://github.com/decred/politeia/issues/729
+* @richardred generated a thorough overview/simulation of the different quorum calculation https://github.com/RichardRed0x/pi-research/blob/master/analysis/voting/quorum-change-examples.md
 
 [dcrandroid](https://github.com/decred/dcrandroid): {}
 
@@ -33,7 +34,11 @@ Discussions:
 
 Trezor: {}
 
-[dcrdata](https://github.com/decred/dcrdata): {}
+[dcrdata](https://github.com/decred/dcrdata):
+
+* V4 RC1 https://alpha.dcrdata.org/ https://github.com/decred/dcrdata/wiki/v4.0-Release-Notes-Draft
+
+> There are features and improvements already brewing 4.1, so minor release should follow relatively quickly. 4.0 scope creeped quite a bit, but all for good reason, and it was worth it. (@chappjc on [2019-03-20](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$155305431834229kjptE:decred.org))
 
 [Ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher): {}
 
@@ -65,6 +70,8 @@ In March the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqD
 
 Proposal updates:
 
+* [Trust Wallet integration](https://proposals.decred.org/proposals/2ababdea7da2b3d8312a773d477272135a883ed772ba99cdf31eddb5f261d571) authorized for vote
+* [ATM Integration - Planning Phase](https://proposals.decred.org/proposals/aea224a561cfed183f514a9ac700d68ba8a6c71dfbee71208fb9bff5fffab51d) authorized for vote
 * Re-submission of Coffee Wallet [proposal](https://proposals.decred.org/proposals/45de9806c952c5ffc2fc6782fddbc74c852c26e3fb0e950144b92d75082c4731) after it was abandoned was [blocked](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$155144086813111EMAcC:decred.org) as an attempt to use Politeia to market the product.
 * India awareness https://www.reddit.com/r/decred/comments/awb5y0/preproposal_decred_india_community_new_user/
   * In a chat discussion it was pointed out that a similar proposal was submitted for Dash https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$15515162772723165JzrFj:matrix.org https://www.dash.org/forum/threads/building-commercial-dash-use-in-the-freelancing-industry-across-south-asia.17890/
@@ -119,6 +126,12 @@ New merchants:
 
 ditto biweekly mar 1 https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$155148239113862OPjOD:decred.org
 
+ditto biweekly mar 15 https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$155268940829940XRdUb:decred.org
+
+Discussions:
+
+* Revisited idea to give "decentralized credits" more visibility https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$155298850932396heGyM:decred.org https://github.com/decred/dcrweb/issues/615 https://github.com/decred/dcrweb/issues/66
+
 ## Events
 
 Attended:
@@ -141,11 +154,19 @@ Upcoming:
 
 {ratings news}
 
+FCAS, integrated in cmc {insert current decred rating}
+*  https://medium.com/@davebalter/coinmarketcap-partners-with-flipside-crypto-to-distribute-project-health-scores-f181374f3d0e
+* https://coinmarketcap.com/currencies/decred/#ratings
+
 Selected articles:
 
+* https://www.cryptonewsz.com/how-close-to-absolute-decentralization-is-decreds-unique-consensus-mechanism/8998/ (missed in Feb issue)
 * https://medium.com/@NoahPierau/the-best-on-chain-governance-system-67759bf25335 (missed in Feb issue) {is it published now?}
 * https://www.smithandcrown.com/decred-deep-dive-report/ {}-page report
 * https://mp.weixin.qq.com/s/GTw2YJPyASJZNJf2ZP1WDw (CN)
+* https://www.wsj.com/articles/gerons-take-decred-aims-to-reach-cryptos-decentralized-ideals-11552523191 sharing far and wide recommended, backstory how it was achieved and a non-paywalled link here https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$155258031728259tirwF:decred.org
+* https://www.theblockcrypto.com/2019/03/20/decred-an-experiment-in-on-chain-governance/ (paywall)
+
 
 Translations:
 
@@ -183,7 +204,8 @@ Community stats:
 
 Comm systems news:
 
-* Stakey sticker pack is now available on Riot.im client. https://twitter.com/dcrstakey/status/1104032806513115136
+* Stakey stickers are now [available](https://twitter.com/dcrstakey/status/1104032806513115136) in Riot web, Android and iOS Matrix clients. Thanks to @lustosa and Matrix folks for adding! Excited testing of these totally [disrupted](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$155205491220668sKKGI:decred.org) #general. Known issue: Matrix stickers do not cross the bridge to Slack and Discord. Secret hint from @jrick: these stickers are available across the entire Matrix federation and can be used in rooms with no relation to Decred. Use wisely.
+* Chinese community members managed to setup a [page](https://www.chainnode.com/forum/305) for Decred discussion on chainnode.com, a rebrand of 8btc.com and one of the largest crypto forums in Chinese. {any stats from there?}
 
 {selected discussed topics, as bullet list or one paragraph per topic}
 
@@ -233,11 +255,17 @@ Grin
 
 * https://www.coindesk.com/privacy-cryptocurrency-grin-votes-to-fund-third-full-time-developer
 
+Jack Dorsey [announced](https://www.coindesk.com/square-hiring-crypto-engineers-bitcoin) Square is looking to fund engineers and a designer to work full-time on Bitcoin and cryptocurrency ecosystem, as a way to give back to the community. One [response](https://twitter.com/martybent/status/1108493263185559552) noted that this shows why "dev fund" embedded in a protocol is not needed, because network participants have enough incentives to fund their infrastructure. In case of Decred, if the Treasury is ever deemed no longer necessary, it is in the power stakeholders to repurpose it for investing into a wider crypto/open source/open hardware ecosystem, or disband it entirely.
+
 {DEX}
 
 https://cointelegraph.com/news/report-quadrigacx-wallets-have-been-empty-unused-since-april
 
+New research from @BitwiseInvest [suggest](https://twitter.com/BitwiseInvest/status/1109114656944209921) 95% of reported BTC spot volume is fake, but also notes many good news about the crypto ecosystem.
+
 {related exchanges and websites}
+
+IMF found an [elegant solution](https://blogs.imf.org/2019/02/05/cashing-in-how-to-make-negative-interest-rates-work/) how to make negative interest rates work as a counter-measure to a possible future crisis. Negative interest rate of -3% is when you deposit $100 to a bank and withdraw $97 a year later. Such rate is currently hard to force because people would just hold cash. The "straightforward" solution would be to move into a happy "cashless world" where the bank can set arbitrary negative rate and you simply can't withdraw to cash to save your value from melting. This is expected to "make consumption and investment more attractive, ... jolt lending, boost demand, and stimulate the economy". But getting rid of cash is not easy and is years away. So another solution to sustain a negative interest rate that is easier to roll today is to introduce a floating conversion rate between e-money and cash. This way, in a -3% interest rate scenario, you either deposit 100 dollars into e-dollars and get 97 e-dollars after a year, or hold cash but enjoy a 3% value loss against both e-dollar and goods. The result is there is no benefit to hold cash relative to bank deposits. Disclaimer: this paragraph is written by a layman. Economists are welcome to [comment](https://www.reddit.com/r/decred/) how this is healthy at all.
 
 Poloniex [committed](https://medium.com/circle-blog/poloniex-welcomes-grin-commits-to-share-transaction-fees-for-1-year-d07bc92cc0f8) to share a portion of Grin trading fees with Grin General Fund. For the first month, 50% of all fees will be donated, for the next 11 months it will be 25%. Pretty rare and generous act.
 
