--- a/journal/201903.md
+++ b/journal/201903.md
@@ -238,6 +238,11 @@ GitHub policy update, sanctions and export laws {dig the new restrictions}
 * For Decred this means result in restrictions on accepting contributions from people in countries sanctioned by the U.S. {correct? https://github.com/xaur/decred-issues/issues/125}
 * while unpleasant, the move is pretty common for a service that provides "free" services. Good moment to reflect on our beliefs about free stuff.
 
+{https://twitter.com/el33th4xor/status/1111315262727430145
+> This XLM bug sounds bad, but what's a million times worse is the response where they patched it quietly. A coin that can do that isn't decentralized.- Emin Gun Sirer @el33th4xor
+Messari Report Uncovers 2.25 Billion XLM Inflation Bug In Stellar’s Code In 2017; Patched Quietly}
+
+
 {PoW, ASIC resistance, tech}
 
 {governance, funding, forks, chain splits, controversy}
