Rel ext notes to fill in

--- a/journal/201903.md
+++ b/journal/201903.md
@@ -282,7 +282,32 @@ GitHub policy update, sanctions and export laws {dig the new restrictions}
 
 {https://twitter.com/el33th4xor/status/1111315262727430145
 > This XLM bug sounds bad, but what's a million times worse is the response where they patched it quietly. A coin that can do that isn't decentralized.- Emin Gun Sirer @el33th4xor
-Messari Report Uncovers 2.25 Billion XLM Inflation Bug In Stellar’s Code In 2017; Patched Quietly}
+> Messari Report Uncovers 2.25 Billion XLM Inflation Bug In Stellar’s Code In 2017; Patched Quietly}
+>
+> 
+
+Monero new FFS
+https://www.reddit.com/r/Monero/comments/ay0j5n/the_new_ffs_is_complete_please_use_and_explore_it/
+
+Dash Trust Protector Election
+https://dashwatchbeta.org/elections
+
+Dash upgrade progress:
+
+https://blog.dash.org/over-50-masternodes-registered-deterministic-masternode-list-31356e4e6c35
+
+Tezos first part of vote completed
+
+https://www.coindesk.com/welcome-to-athens-tezos-completes-historic-first-blockchain-vote
+
+Cosmos first round of voting:
+
+<https://cosmos.bigdipper.live/proposals/1>
+
+Pivx inflation bug exploited
+https://medium.com/@dev.pivx/report-wrapped-serials-attack-5f4bf7b51701
+
+
 
 
 {PoW, ASIC resistance, tech}
