--- a/journal/201903.md
+++ b/journal/201903.md
@@ -12,13 +12,40 @@
 
 [dcrd](https://github.com/decred/dcrd):
 
-* https://github.com/decred/dcrd/pull/1656 {how does this fit into a bigger picture e.g. multipeer, ln?} {congratz del lines, how come?}
+* Initial Bech32 ([BIP 173](https://github.com/bitcoin/bips/blob/master/bip-0173.mediawiki) support [ported](https://github.com/decred/dcrd/pull/1646) from btcsuite.
 
-> \[vote propagation latency is affected by]\ Many factors, but per node avg from ~70ms to sub 5ms on my nodes. Need more data for better values. Good alone, but real gains will come with majority network upgrade since savings are multiplied by num nodes votes traverse (log_8(tot)). Full deployment ~90% overall improvement. ([@davecgh](https://twitter.com/davecgh/status/1110721000172384256))
+* Huge [refactoring](https://github.com/decred/dcrd/pull/1656) made initial sync 20-25% faster and significantly reduced overall vote propagation latency. Full sync on a typical hardware now takes around 45 mins.
+
+`txscript` module was completely refactored to use a new zero-allocation script tokenizer.
+
+> Initial sync is a big factor of course, but the real gains are in the onging transaction processing for mempool. The other really nice facet is the exported tokenizer which means it's possible to do zero-allocation analysis on scripts outside of txscript which is great for building apps (e.g. atomic swaps, taproot, etc) on top. ([@davecgh](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$155249146926580yNJqU:decred.org))
+
+> \[vote propagation latency is affected by\] Many factors, but per node avg from ~70ms to sub 5ms on my nodes. Need more data for better values. Good alone, but real gains will come with majority network upgrade since savings are multiplied by num nodes votes traverse (log_8(tot)). Full deployment ~90% overall improvement. ([@davecgh](https://twitter.com/davecgh/status/1110721000172384256))
+
+Because a critical and error prone area of consensus code was changed, significant effort has been put into making these changes easier to reason about and review by carefully crafting a series of 122 individual commits such that every commit message thoroughly describes its purpose, maintains consensus, and therefore passes all tests.
+
+The refactoring also slashed 2K lines of code. Less code, less bugs!
+
+{how does 1656 and 1698 fit into a bigger picture e.g. multipeer, ln?}
+
+There is another area of refactoring that could remove another 10-15 min of initial block download but it requires months of solid work (hint to contributors).
+
+Introduced reusable [LRU cache](https://github.com/decred/dcrd/pull/1683) module.
+
+Module `hdkeychain` [refactored](https://github.com/decred/dcrd/pull/1696) to make code less brittle and more testable.
+
+Merged https://github.com/decred/dcrd/pull/1424 {what does it do? what is the goal of the multiple mining PRs?}
+
+Lots of refactorings to harden the codebase against unintended changes.
+
+* Another large refactor [started](https://github.com/decred/dcrd/pull/1698) to solve multiple issues in `chaincfg` module.
+* Discussion [started](https://github.com/decred/dcrd/issues/1645) to protect seeding process from DNS based attacks
 
 [dcrwallet](https://github.com/decred/dcrwallet): {}
 
-[Decrediton](https://github.com/decred/decrediton): {}
+[Decrediton](https://github.com/decred/decrediton):
+
+* Ticket activity visualization merged https://github.com/decred/decrediton/pull/2075
 
 [Politeia](https://github.com/decred/politeia):
 
@@ -26,7 +53,7 @@
   * https://richardred0x.github.io/politeia-digest/issue-012.html
   * is it fixed in https://github.com/decred/politeia/pull/742 ?
 * first large patches for contractor management landed in master
-* refactoring to support contractor management system
+* refactoring to remove technical debt and support contractor management system https://github.com/decred/politeia/pull/701
 * diff viewer {is the feature complete or needs more work? is it deployed?} https://github.com/decred/politeiagui/pull/1004
 * test coverage increased from 13% to 19% https://github.com/decred/politeia/pull/727
 
@@ -55,8 +82,8 @@ v4 is released
 
 WIP:
 
-* load testing and performance optimization
-* Live block vote tracking https://github.com/decred/dcrdata/pull/1125
+* load testing and performance optimization continues
+* live consensus vote tracking https://github.com/decred/dcrdata/pull/1125
 * dependency management improvements with Go modules
 * faster charts https://github.com/decred/dcrdata/pull/1126
 
@@ -72,6 +99,8 @@ WIP:
 Other:
 
 * {how many VSPs upgraded to self-hosted captcha?}
+* @raedah [shared](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$155329781839253ivNYC:decred.org) screenshots of the experimental godcr wallet which has CLI, terminal, HTTP and Nuklear UI front-ends.
+* New [dcrtime_checker](https://github.com/decred/dcrtime/tree/master/cmd/dcrtime_checker) tool was created to verify anchors against the blockchain directly (without interacting with dcrtimed).
 
 Dev activity stats for March: {} active PRs, {} master commits, {} added and {} deleted lines spread across {} repositories. Contributions came from {}-{} developers per repository. ([chart]({}))
 
@@ -92,22 +121,24 @@ In March the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqD
 Proposal status as of {}:
 
 * [Trust Wallet integration](https://proposals.decred.org/proposals/2ababdea7da2b3d8312a773d477272135a883ed772ba99cdf31eddb5f261d571) vote started. Trust Wallet devs started implementing their part for Decred ahead of the vote https://github.com/TrustWallet/wallet-core/issues/43
-* [ATM Integration - Planning Phase](https://proposals.decred.org/proposals/aea224a561cfed183f514a9ac700d68ba8a6c71dfbee71208fb9bff5fffab51d) vote started
+* [ATM Integration - Planning Phase](https://proposals.decred.org/proposals/aea224a561cfed183f514a9ac700d68ba8a6c71dfbee71208fb9bff5fffab51d) vote started, rejected with 52%.
 * Re-submission of Coffee Wallet [proposal](https://proposals.decred.org/proposals/45de9806c952c5ffc2fc6782fddbc74c852c26e3fb0e950144b92d75082c4731) after it was abandoned was [blocked](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$155144086813111EMAcC:decred.org) as an attempt to use Politeia to market the product.
 * India awareness https://www.reddit.com/r/decred/comments/awb5y0/preproposal_decred_india_community_new_user/
   * In a chat discussion it was pointed out that a similar proposal was submitted for Dash https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$15515162772723165JzrFj:matrix.org https://www.dash.org/forum/threads/building-commercial-dash-use-in-the-freelancing-industry-across-south-asia.17890/
-* Decentralize Treasury Spending by moo31337 https://proposals.decred.org/proposals/c96290a2478d0a1916284438ea2c59a1215fe768a87648d04d45f6b7ecb82c3f
+* https://www.reddit.com/r/decred/comments/b84t6b/preproposal_second_constitutional_amendment_to/
+* [Decentralize Treasury Spending](https://proposals.decred.org/proposals/c96290a2478d0a1916284438ea2c59a1215fe768a87648d04d45f6b7ecb82c3f) by moo31337 
+* [Fiat Pairs integration on EXMO Exchange](https://proposals.decred.org/proposals/950e8149e594b01c010c1199233ab11e82c9da39174ba375d286dc72bb0a54d7) 
 
 https://github.com/RichardRed0x/pi-research/blob/master/analysis/voting/early-voting-influence.md
 
-{pidigest}
+{pidigests}
 
 Discussions:
 
 * Treasury spend https://www.reddit.com/r/decred/comments/b5vlrl/we_have_spent_23_of_decred_treasury_should_we_be/
 * https://github.com/decred/politeia/issues/729 https://github.com/RichardRed0x/pi-research/blob/master/analysis/voting/quorum-change-examples.md
 
-decredcommunity.org got some [criticism](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$155227203622209rOKeX:decred.org) for not being open source and not explicitly stating it in the body of the proposal. One of the arguments is that the Treasury never paid for closed source work before, except for some integrations where it could not be disclosed. The discussion also triggered some [improvements](https://github.com/decred/dcrdocs/pull/896) in proposal guidelines to state any restrictions on deliverables.
+decredcommunity.org got some [criticism](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$155227203622209rOKeX:decred.org) for not being open source and not explicitly stating it in the body of the proposal. One of the arguments is that the Treasury never paid for closed source work before, except for some integrations where it could not be disclosed. https://github.com/karamble/dcrcommunityweb/issues/1 The discussion also triggered some [improvements](https://github.com/decred/dcrdocs/pull/896) in proposal guidelines to state any restrictions on deliverables.
 
 ## Network
 
@@ -357,6 +388,8 @@ IMF found an [elegant solution](https://blogs.imf.org/2019/02/05/cashing-in-how-
 Poloniex [committed](https://medium.com/circle-blog/poloniex-welcomes-grin-commits-to-share-transaction-fees-for-1-year-d07bc92cc0f8) to share a portion of Grin trading fees with Grin General Fund. For the first month, 50% of all fees will be donated, for the next 11 months it will be 25%. Pretty rare and generous act.
 
 https://twitter.com/CoinbaseCustody
+
+Coinbase received backlash for acquiring Neutrino https://news.bitcoin.com/coinbase-severs-ties-with-hacking-team-members-while-data-sharing-backlash-intensifies/ https://www.coindesk.com/bitcoin-delete-coinbase-neutrino-crypto
 
 {other: regulations, security, fun}
 
