--- a/journal/201903.md
+++ b/journal/201903.md
@@ -2,104 +2,111 @@
 
 ![{alt text}](../img/{file.jpg} "{hover text}")
 
-{introduction, major news of the month}
+{introduction, major news of the month
+
+* dcrd optimization
+* voted proposals
+* Treasury proposal
+
+}
 
 ## Development
 
-{per-project summary, drop items without updates}
-
-{order of reporting: changes released > merged to master > started work > discussions and future plans}
-
-[dcrd](https://github.com/decred/dcrd):
-
-* Initial Bech32 ([BIP 173](https://github.com/bitcoin/bips/blob/master/bip-0173.mediawiki) support [ported](https://github.com/decred/dcrd/pull/1646) from btcsuite.
-
-* Huge [refactoring](https://github.com/decred/dcrd/pull/1656) made initial sync 20-25% faster and significantly reduced overall vote propagation latency. Full sync on a typical hardware now takes around 45 mins.
-
-`txscript` module was completely refactored to use a new zero-allocation script tokenizer.
-
-> Initial sync is a big factor of course, but the real gains are in the onging transaction processing for mempool. The other really nice facet is the exported tokenizer which means it's possible to do zero-allocation analysis on scripts outside of txscript which is great for building apps (e.g. atomic swaps, taproot, etc) on top. ([@davecgh](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$155249146926580yNJqU:decred.org))
+[dcrd](https://github.com/decred/dcrd): Huge [refactoring](https://github.com/decred/dcrd/pull/1656) makes initial sync [20-25%](https://twitter.com/davecgh/status/1110649183185317889) faster and significantly reduces overall vote propagation latency. Full sync on a typical hardware now takes around 45 mins.
 
 > \[vote propagation latency is affected by\] Many factors, but per node avg from ~70ms to sub 5ms on my nodes. Need more data for better values. Good alone, but real gains will come with majority network upgrade since savings are multiplied by num nodes votes traverse (log_8(tot)). Full deployment ~90% overall improvement. ([@davecgh](https://twitter.com/davecgh/status/1110721000172384256))
 
+As part of the optimization `txscript` module was completely refactored to use a new zero-allocation script tokenizer.
+
+> Initial sync is a big factor of course, but the real gains are in the onging transaction processing for mempool. The other really nice facet is the exported tokenizer which means it's possible to do zero-allocation analysis on scripts outside of txscript which is great for building apps (e.g. atomic swaps, taproot, etc) on top. ([@davecgh](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$155249146926580yNJqU:decred.org))
+
 Because a critical and error prone area of consensus code was changed, significant effort has been put into making these changes easier to reason about and review by carefully crafting a series of 122 individual commits such that every commit message thoroughly describes its purpose, maintains consensus, and therefore passes all tests.
 
-The refactoring also slashed 2K lines of code. Less code, less bugs!
+Bonus: the refactoring slashed some 2K lines of code. Less code, less bugs!
 
-{how does 1656 and 1698 fit into a bigger picture e.g. multipeer, ln?}
+{how do 1656 and 1698 fit into a bigger picture e.g. multipeer, ln?}
 
-There is another area of refactoring that could remove another 10-15 min of initial block download but it requires months of solid work (hint to contributors).
+There is an opportunity to remove another 10-15 min of initial block download but it requires months of solid work _(hint to contributors)_.
 
-Introduced reusable [LRU cache](https://github.com/decred/dcrd/pull/1683) module.
+Other merged work:
 
-Module `hdkeychain` [refactored](https://github.com/decred/dcrd/pull/1696) to make code less brittle and more testable.
+* Initial Bech32 ([BIP 173](https://github.com/bitcoin/bips/blob/master/bip-0173.mediawiki) support [ported](https://github.com/decred/dcrd/pull/1646) from btcsuite.
+* Introduced reusable [LRU cache](https://github.com/decred/dcrd/pull/1683) module.
+* Module `hdkeychain` [refactored](https://github.com/decred/dcrd/pull/1696) to make code less brittle and more testable.
+* [Added](https://github.com/decred/dcrd/pull/1424) new background block template generators {what does 1424 do? what is the goal of the multiple mining PRs?}
+* Lots of refactoring and testing improvements to harden the codebase against unintended changes.
 
-Merged https://github.com/decred/dcrd/pull/1424 {what does it do? what is the goal of the multiple mining PRs?}
+A total of [209 commits](https://github.com/decred/dcrd/compare/4e7f080b7b2cb11a8680d54dc5fb9ce735119d15...8f5019e083e92f31b2799f9d23809e0c0692d465) from 9 contributors were merged.
 
-Lots of refactorings to harden the codebase against unintended changes.
+In progress:
 
 * Another large refactor [started](https://github.com/decred/dcrd/pull/1698) to solve multiple issues in `chaincfg` module.
-* Discussion [started](https://github.com/decred/dcrd/issues/1645) to protect seeding process from DNS based attacks
+* Discussion [started](https://github.com/decred/dcrd/issues/1645) to protect node seeding process from DNS based attacks
 
-[dcrwallet](https://github.com/decred/dcrwallet): {}
+[dcrwallet](https://github.com/decred/dcrwallet): bug fixes and code maintenance. Merged [12 commits](https://github.com/decred/dcrwallet/compare/9f5f1163d8bf8037138f07734002470d4100de21...9450c9183e71231065dc0ea25087a47e8e5bb38e) from 6 contributors.
 
-[Decrediton](https://github.com/decred/decrediton):
-
-* Ticket activity visualization merged https://github.com/decred/decrediton/pull/2075
+[Decrediton](https://github.com/decred/decrediton): Ticket activity heatmap visualization merged among smaller fixes - total [5 commits](https://github.com/decred/decrediton/compare/35ab6e216dde0bc90d76334e25eb5174bf62e623...f80e832e55231a8f4cb7b1aa69f6e2faea2709df) from 2 contributors.
 
 [Politeia](https://github.com/decred/politeia):
 
-* {post-vote vote bug, explain impact and fix}
-  * https://richardred0x.github.io/politeia-digest/issue-012.html
-  * is it fixed in https://github.com/decred/politeia/pull/742 ?
-* first large patches for contractor management landed in master
-* refactoring to remove technical debt and support contractor management system https://github.com/decred/politeia/pull/701
-* diff viewer {is the feature complete or needs more work? is it deployed?} https://github.com/decred/politeiagui/pull/1004
-* test coverage increased from 13% to 19% https://github.com/decred/politeia/pull/727
+User:
+
+* Added tab to [preview](https://github.com/decred/politeiagui/pull/1018) proposal text.
+* Completed feature to [view difference](https://github.com/decred/politeiagui/pull/1004) between proposal versions. {is the feature complete or needs more work? is it deployed?}
+* Default comment sort option [set to](https://github.com/decred/politeiagui/pull/1034) Top, added feature to set sort in the URL.
+* Multiple bug fixes.
+
+Dev:
+
+* First large changes for contractor management system landed in master
+* Completed multiple steps of refactoring to fix accumulated layer violations and better support contractor management system.
+* Test coverage [increased](https://github.com/decred/politeia/pull/727) from 13% to 19%.
+
+A bug was detected that allowed advanced users to cast votes beyond the end of the voting period. The fix was deployed on Mar 13.
+
+> The reassuring part about Politeia is that all of the data is publicly available and is periodically timestamped onto the Decred blockchain. This means that anyone can pull the data down from github and cryptographically verify which votes were cast within the voting period (+/- 1 hour) and which ones were cast after the voting period had ended. (@lukebp in [Politeia Digest 12](https://richardred0x.github.io/politeia-digest/issue-012.html))
+
+{where is the issue or PR for the fix? is it https://github.com/decred/politeia/pull/742 ?}
+
+Merged a total of 40 commits in [politeia](https://github.com/decred/politeia/compare/8057ced5e4c0a04823a261cc064602f1a8a2ab1b...13eb0038975ff4fcddb70565687434354d208a0f) and [politeiagui](https://github.com/decred/politeiagui/compare/52c775330beb1b77ed817c85bccaaf2a8e199cdc...72885ed6e58c8a2f1bfbd2d039f6cd19b52912fe) from 6-9 contributors.
 
 Discussions:
 
-* yes-based quorum https://github.com/decred/politeia/issues/729
-* @richardred generated a thorough overview/simulation of the different quorum calculation https://github.com/RichardRed0x/pi-research/blob/master/analysis/voting/quorum-change-examples.md
+* @richardred suggested to base the quorum solely on the percentage of [Yes votes](https://github.com/decred/politeia/issues/729) (currently Yes+No votes are counted) and generated a [simulation](https://github.com/RichardRed0x/pi-research/blob/master/analysis/voting/quorum-change-examples.md) comparing different quorum calculation methods.
 
 [dcrandroid](https://github.com/decred/dcrandroid): {}
 
 [dcrios](https://github.com/raedahgroup/dcrios): {}
 
-Trezor: {}
+[dcrdata](https://github.com/decred/dcrdata): Version 4 [released](https://twitter.com/decredexplorer/status/1110618796975370240) and is available at [explorer.dcrdata.org](https://explorer.dcrdata.org/).
 
-[dcrdata](https://github.com/decred/dcrdata):
+User facing changes include complete redesign with new page styles, more information and better organization, Politeia proposal pages, aggregate block information on time intervals, log and linear scaling for charts, exchange rate monitoring, and lots of smaller changes. It is rumored that the HODL watermark is gone. See full [release notes](https://github.com/decred/dcrdata/releases/tag/v4.0.0) for a lot of developer changes.
 
-* V4 RC1 https://alpha.dcrdata.org/ https://github.com/decred/dcrdata/wiki/v4.0-Release-Notes-Draft
+v4 release received a stunning 48K added and 19K deleted lines in 325 commits from 11 contributors. Congrats!
 
-> There are features and improvements already brewing 4.1, so minor release should follow relatively quickly. 4.0 scope creeped quite a bit, but all for good reason, and it was worth it. (@chappjc on [2019-03-20](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$155305431834229kjptE:decred.org))
+> There are features and improvements already brewing 4.1, so minor release should follow relatively quickly. 4.0 scope creeped quite a bit, but all for good reason, and it was worth it. ([@chappjc](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$155305431834229kjptE:decred.org))
 
-https://twitter.com/decredexplorer/status/1110618796975370240
+In progress:
 
-v4 is released
+* Load testing and performance optimization continues.
+* Dependency management improvements with Go modules.
+* Live consensus [vote tracking](https://github.com/decred/dcrdata/pull/1125).
+* Faster [charts](https://github.com/decred/dcrdata/pull/1126).
 
-* HODL is gone for those who noticed it.
-
-WIP:
-
-* load testing and performance optimization continues
-* live consensus vote tracking https://github.com/decred/dcrdata/pull/1125
-* dependency management improvements with Go modules
-* faster charts https://github.com/decred/dcrdata/pull/1126
-
-[Ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher): {}
+[Ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher): v0.7.6 [released](https://github.com/matheusd/dcr-split-ticket-matcher/releases/tag/v0.7.6) that optimizes the fetching of unspent outputs from dcrdata and adds macOS binaries.
 
 [docs](https://github.com/decred/dcrdocs):
 
-* new [Ticket Splitting](https://docs.decred.org/proof-of-stake/ticket-splitting/) guide
+* new detailed [Ticket Splitting](https://docs.decred.org/proof-of-stake/ticket-splitting/) guide
 * [Consensus Rules Voting](https://docs.decred.org/governance/consensus-rule-voting/consensus-rules-voting/) reworked and expanded
+* updated [Proposal Guidelines](https://docs.decred.org/governance/politeia/proposal-guidelines/) to include requirements for proposals that seek funding from Treasury and an advice to speak to broad audience.
 
-[decred.org](https://github.com/decred/dcrweb): {}
+[decred.org](https://github.com/decred/dcrweb): updated exchanges and translations, [self-hosted](https://github.com/decred/dcrweb/pull/604) intro video to remove a YouTube request.
 
 Other:
 
-* {how many VSPs upgraded to self-hosted captcha?}
-* @raedah [shared](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$155329781839253ivNYC:decred.org) screenshots of the experimental godcr wallet which has CLI, terminal, HTTP and Nuklear UI front-ends.
+* About half VSPs upgraded to self-host captcha to protect privacy of their users. Status can be tracked [here](https://github.com/decred/dcrstakepool/issues/326).
+* @raedah [shared](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$155329781839253ivNYC:decred.org) screenshots of the experimental godcr wallet which has CLI, terminal _(yes!)_, web browser and Nuklear GUI front-ends.
 * New [dcrtime_checker](https://github.com/decred/dcrtime/tree/master/cmd/dcrtime_checker) tool was created to verify anchors against the blockchain directly (without interacting with dcrtimed).
 
 Dev activity stats for March: {} active PRs, {} master commits, {} added and {} deleted lines spread across {} repositories. Contributions came from {}-{} developers per repository. ([chart]({}))
