--- a/journal/201903.md
+++ b/journal/201903.md
@@ -134,15 +134,11 @@ Discussions:
 
 ## Network
 
-{cross-check dcred.eu, dcrstats.com and charts.dcr.farm to get the numbers}
+Hashrate: March's hashrate varied between the low of 221 Ph/s and a new ATH of 570 Ph/s. During first half of the month the average held around 320 Ph/s but went above 400 Ph/s towards the end. Pool hashrate distribution as of Apr 1: F2Pool 23%, Poolin 20%, lab.antpool.com 16%, BTC.com 12%, UUPool 11%, Luxor 3.2%, CoinMine 0.4% and others 14% per dcrstats.com. Pool distribution numbers are approximate and cannot be accurately determined.
 
-Hashrate: {month}'s hashrate opened at ~{} Ph/s and closed ~{} Ph/s, bottoming at {} Ph/s and peaking at {} Ph/s throughout the month. Pool hashrate distribution: {} per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
+Staking: 30-day average ticket price was 112.3 DCR (+0.6) on Apr 1 per dcrstats.com. The price varied between 108.6-117.9 DCR. Locked amount was 4.47-4.61 million DCR, which corresponded to 46.9-48.6% of the available supply.
 
-Staking: 30-day average ticket price was {} DCR (+{}) per dcrstats.com. The price varied between {}-{} DCR. Locked amount was {}-{} million DCR, which corresponded to {}-{}% of the available supply.
-
-Nodes: As of {date} there were {} public listening nodes and {} normal nodes per [dcred.eu](https://dcred.eu/nodeStats). Version distribution: {}.
-
-{any interesting analysis or events in the network}
+Nodes: As of Apr 1 there were 191 public listening nodes and 336 normal nodes per [dcred.eu](https://dcred.eu/nodeStats). Version distribution: v1.5.0 dev builds: 6.3% (-2.3%), v1.4.0: 55% (+12%), v1.4.0 dev and rc builds: 5% (-2%), v1.3.0: 17% (-6%), v1.2.0: 9.5% (-0.5%), v1.1.2: 4%, v1.1.0: 1.7% (-0.3%).
 
 ## Mining
 
