added some rel ext content

--- a/journal/201903.md
+++ b/journal/201903.md
@@ -314,32 +314,19 @@ GitHub policy update, sanctions and export laws {dig the new restrictions}
 * For Decred this means result in restrictions on accepting contributions from people in countries sanctioned by the U.S. {correct? https://github.com/xaur/decred-issues/issues/125}
 * while unpleasant, the move is pretty common for a service that provides "free" services. Good moment to reflect on our beliefs about free stuff.
 
-{https://twitter.com/el33th4xor/status/1111315262727430145
-> This XLM bug sounds bad, but what's a million times worse is the response where they patched it quietly. A coin that can do that isn't decentralized.- Emin Gun Sirer @el33th4xor
-> Messari Report Uncovers 2.25 Billion XLM Inflation Bug In Stellar’s Code In 2017; Patched Quietly}
->
-> 
+Stellar (XLM) [experienced](https://messari.io/article/messari-research-stellar-suffered-and-quietly-patched-a-2-2-billion-xlm-inflation-bug-in-2017) an inflation bug which was exploited to print 2.25 billion XLM (worth $10 million at the time, and nearly 25% of the circulating supply) in April 2017. This bug was lightly reported at the time, it was fixed by the Stellar Development Foundation (SDF) who burned an equal amount from its community reserve. That the SDF could identify, fix and mitigate such a major exploit so quietly says something about how decentralized Stellar is.
 
-Monero new FFS
-https://www.reddit.com/r/Monero/comments/ay0j5n/the_new_ffs_is_complete_please_use_and_explore_it/
+PIVX experienced an inflation bug which was [exploited](https://medium.com/@dev.pivx/report-wrapped-serials-attack-5f4bf7b51701) in March. The bug concerned the network's zerocoin protocol (zPIV), and allowed an attacker to fake serial numbers and spend zerocoins that had never been minted. Over the course of five days, transactions creating and spending 568,897 PIV (~$438,000) were made before zPIV the exploit was identified and zPIV transactions were disabled until it could be fixed.
 
-Dash Trust Protector Election
-https://dashwatchbeta.org/elections
+Monero's new [Community Crowdfunding System](https://ccs.getmonero.org/) was [launched](https://www.reddit.com/r/Monero/comments/ay0j5n/the_new_ffs_is_complete_please_use_and_explore_it/), and a number of projects were funded.
 
-Dash upgrade progress:
+Dash held an [election](https://blog.dash.org/announcing-the-dash-dao-irrevocable-trust-election-results-bfe134c113b0) for Trust Protectors, people who will oversee the operation of a legal trust that has been [set up](https://blog.dash.org/dash-network-elected-trust-protectors-closing-the-governance-loop-4f07b46da03e) to own and control Dash Core Group. 
 
-https://blog.dash.org/over-50-masternodes-registered-deterministic-masternode-list-31356e4e6c35
+Dash also [finished](https://blog.dash.org/deterministic-masternode-list-and-automatic-instantsend-now-live-f2028d833388) the deployment of the Deterministic Masternode List, enabling automatic instant payments for transactions with fewer than 4 inputs. This is part of a 
 
-Tezos first part of vote completed
+Dash Core Group further [tightened](https://www.theblockcrypto.com/2019/03/04/corporation-behind-dash-lays-off-senior-staff-as-bear-market-grip-tightens/) its budget with layoffs and salary freezes. 
 
-https://www.coindesk.com/welcome-to-athens-tezos-completes-historic-first-blockchain-vote
-
-Cosmos first round of voting:
-
-<https://cosmos.bigdipper.live/proposals/1>
-
-Pivx inflation bug exploited
-https://medium.com/@dev.pivx/report-wrapped-serials-attack-5f4bf7b51701
+Tezos [concluded](https://www.coindesk.com/welcome-to-athens-tezos-completes-historic-first-blockchain-vote) the first round of voting for its Athens upgrade. In this round bakers were choosing from between two versions of the Athens upgrade which increases the gas limit, and they chose the Athens A version which also decreases the minimum roll size and lowers the barrier to entry for bakers. The process has now moved on to its next phase, where bakers must confirm that the selected proposal should proceed to a subsequent testing and confirmation phase.
 
 
 
@@ -348,14 +335,7 @@ https://medium.com/@dev.pivx/report-wrapped-serials-attack-5f4bf7b51701
 
 {governance, funding, forks, chain splits, controversy}
 
-{update on Dash upgrade process}
 
-* https://blog.dash.org/over-50-masternodes-registered-deterministic-masternode-list-31356e4e6c35
-* {better link} https://docs.dash.org/en/stable/masternodes/dip3-upgrade.html
-
-Dash layoffs amid bear market {expand interesting bits}
-
-* https://www.theblockcrypto.com/2019/03/04/corporation-behind-dash-lays-off-senior-staff-as-bear-market-grip-tightens/
 
 Grin
 
